--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,18 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url "https://jitpack.io" }
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
-        
+        classpath 'com.android.tools.build:gradle:3.0.1'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.0.1'
+
     }
 }
 
@@ -19,6 +24,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven{ url 'https://maven.google.com'}
     }
 }
 
