--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:11.8.0'
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
